--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,12 +48,13 @@ jobs:
         id: check_version_changes
         run: |
           CHANGED_CHARTS=()
-          for chart in parcellab/*; do
+          for chart in ${{ matrix.chart }}; do
             if [ -d "$chart" ]; then
               CURRENT_VERSION=$(yq e '.version' "$chart/Chart.yaml")
-              PREVIOUS_VERSION=$(git show HEAD~1:"$chart/Chart.yaml" 2>/dev/null | yq e '.version' - || echo "")
+              PREVIOUS_VERSION=$(git show HEAD~1:"$chart/Chart.yaml" 2>/dev/null | yq e '.version' - || echo "0")
               if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
-                CHANGED_CHARTS+=("\"$chart\"")
+                echo "New version $CURRENT_VERSION detected in $chart"
+                CHANGED_CHARTS+=("$chart")
               fi
             fi
           done
@@ -69,7 +70,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chart: ${{ fromJSON(needs.test.outputs.changed_charts) }}
+        include: ${{ fromJSON(needs.test.outputs.changed_charts) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -79,10 +80,17 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Run chart-releaser library
-        uses: helm/chart-releaser-action@v1.6.0
-        with:
-          charts_dir: ${{ matrix.chart }}
-          config: cr.yaml
+      - name: Run chart-releaser for each changed chart
+        run: |
+          for chart in ${{ fromJSON(needs.test.outputs.changed_charts) }}; do
+            echo "Releasing $chart..."
+            LAST_RELEASED_TAG=$(git describe --tags --match "$chart-*" --abbrev=0)
+            echo "Discovering changed charts since '$LAST_RELEASED_TAG'..."
+            if [ -z "$LAST_RELEASED_TAG" ] || [ "$LAST_RELEASED_TAG" != "$chart-$CURRENT_VERSION" ]; then
+              helm chart-releaser-action --chart-path $chart
+            else
+              echo "No changes detected for $chart since last release."
+            fi
+          done
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
