--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,11 +1,11 @@
-name: Test
+name: Release
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/test.yaml
+      - .github/workflows/release.yaml
       - parcellab/**
       - "!**.md"
   workflow_dispatch:
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Load repos configuration file
         id: generate-matrix
         run: |
@@ -32,13 +33,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Update dependencies
         run: helm dependency update ${{ matrix.chart }}
+
       - name: Lint chart
         run: helm lint ${{ matrix.chart }}
+
       - name: Template chart
         run: |
           helm show chart ${{ matrix.chart }} | grep "type: library" || helm template ${{ matrix.chart }} > output.yaml
+
       - if: matrix.chart != 'parcellab/common'
         name: Evaluate k8s resources
         uses: instrumenta/kubeval-action@master
@@ -53,10 +58,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
       - name: Run chart-releaser library
         uses: helm/chart-releaser-action@v1.6.0
         with:
