--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -83,6 +83,7 @@ cronjob:
   schedule: "* * * * *"
   successfulJobsHistoryLimit: 3
   suspend: false
+  timeZone: Europe/Berlin
   job:
     activeDeadlineSeconds: 900 # 15 minutes
     backoffLimit: 2
