feat: Add startupProbe to the pods configuration

--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -277,6 +277,11 @@ resources:
 #     path: /
 #     port: http
 
+# startupProbe:
+#   httpGet:
+#     path: /
+#     port: http
+
 ##
 ## Postgresql
 ##
