--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -422,18 +422,14 @@ resources:
 #       - "foo.local"
 #       - "bar.local"
 
-##
-## Postgresql
-##
-
 postgresql:
   enabled: false
   # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
 
-##
-## Redis
-##
-
 redis:
   enabled: false
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
+
+mongodb:
+  enabled: false
+  # See default values: https://artifacthub.io/packages/helm/bitnami/mongodb?modal=values
