feat: INF-1799 version bumping update

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -72,7 +72,7 @@ jobs:
                   echo "Processing $dir"
                   version=$(grep 'version:' $dir/Chart.yaml | cut -d ' ' -f 2)
                   version_bump=$(echo "$version" | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g')
-                  sed -i "s/version: $version/version: $version_bump/g" $dir/Chart.yaml
+                  echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g'
               fi
           done
           git commit -am "Bump version"
