feat: INF-1799 using find

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -67,13 +67,11 @@ jobs:
 
       - name: Bump version
         run: |
-          for dir in parcellab/*; do
-              if [ -d "$dir" ]; then
-                  echo "Processing $dir"
-                  version=$(grep 'version:' $dir/Chart.yaml | cut -d ' ' -f 2)
-                  version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
-                  sed -i "s/version: $version/version: $version_bump/g" $dir/Chart.yaml
-              fi
+          find parcellab -name Chart.yaml | while read file; do
+              echo "Processing $file"
+              version=$(grep 'version:' $dir/Chart.yaml | cut -d ' ' -f 2)
+              version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
+              sed -i "s/version: $version/version: $version_bump/g" $file
           done
           git commit -am "Bump version"
           git push
