feat: INF-1799 Adding step in release pipeline to bump the versions for charts (#262)
* feat: INF-1799 Adding step in release pipeline to bump the versions for charts

* feat: INF-1799 Commenting condition in job for testing

* Bump version

* feat: INF-1799 Rollong back tests

* feat: INF-1799 version bumping update

* feat: INF-1799 version bumping update

* feat: INF-1799 using find

* feat: INF-1799 using find

---------

Co-authored-by: jmpalomares <jmpalomares@users.noreply.github.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,6 +65,17 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Bump version
+        run: |
+          find parcellab -name Chart.yaml | while read file; do
+              echo "Processing $file"
+              version=$(grep 'version:' $file | cut -d ' ' -f 2)
+              version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
+              sed -i "s/version: $version/version: $version_bump/g" $file
+          done
+          git commit -am "Bump version"
+          git push
+
       - name: Run chart-releaser library
         uses: helm/chart-releaser-action@v1.6.0
         with:
