--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -71,10 +71,12 @@ jobs:
       - name: Check changed files
         id: check_files
         run: |
-          changed_files=$(git diff --name-only HEAD | { grep -vE '^parcellab/.*/Chart.yaml$' || true; })
+          changed_files=$(git diff --name-only HEAD^ HEAD)
           if echo "${changed_files}" | grep -qE '^parcellab/'; then
+            echo "::set-output name=skip::false"
             echo "skip=false" >> $GITHUB_ENV
           else
+            echo "::set-output name=skip::true"
             echo "skip=true" >> $GITHUB_ENV
           fi
 
@@ -89,9 +91,6 @@ jobs:
         run: |
           find parcellab -name Chart.yaml | while read file; do
               chart_dir=$(dirname "$file")
-              if git diff --quiet HEAD^ HEAD -- "$chart_dir"; then
-                  continue
-              fi
               echo "Processing $file"
               version=$(grep 'version:' $file | cut -d ' ' -f 2)
               version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
