--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -73,12 +73,11 @@ jobs:
         run: |
           changed_files=$(git diff --name-only HEAD^ HEAD)
           if echo "${changed_files}" | grep -qE '^parcellab/'; then
-            echo "::set-output name=skip::false"
             echo "skip=false" >> $GITHUB_ENV
           else
-            echo "::set-output name=skip::true"
             echo "skip=true" >> $GITHUB_ENV
           fi
+          echo "changed_files=$changed_files" >> $GITHUB_ENV
 
       - name: Configure Git
         if: steps.check_files.outputs.skip == 'false'
