fix: correct moved secret reference

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,7 +59,7 @@ jobs:
       - uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: ${{ vars.PARCELLAB_BOT_APPID }}
+          app-id: ${{ secrets.PARCELLAB_BOT_APPID }}
           private-key: ${{ secrets.PARCELLAB_BOT_KEY }}
 
       - name: Checkout
