--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,7 +7,6 @@ on:
     paths:
       - .github/workflows/release.yaml
       - parcellab/**
-      - "!parcellab/**/Chart.yaml"
       - "!**.md"
   workflow_dispatch:
 
@@ -58,9 +57,6 @@ jobs:
     steps:
       - uses: actions/create-github-app-token@v1
         id: app-token
-        with:
-          app-id: ${{ secrets.PARCELLAB_BOT_APPID }}
-          private-key: ${{ secrets.PARCELLAB_BOT_KEY }}
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -72,12 +68,11 @@ jobs:
         id: check_files
         run: |
           changed_files=$(git diff --name-only HEAD^ HEAD)
-          if echo "${changed_files}" | { grep -qE '^parcellab/' || true; }; then
-            echo "skip=false" >> $GITHUB_ENV
+          if echo "${changed_files}" | grep -qE '^parcellab/'; then
+            echo "::set-output name=skip::false"
           else
-            echo "skip=true" >> $GITHUB_ENV
+            echo "::set-output name=skip::true"
           fi
-          echo "changed_files=$changed_files" >> $GITHUB_ENV
 
       - name: Configure Git
         if: steps.check_files.outputs.skip == 'false'
@@ -88,37 +83,14 @@ jobs:
       - name: Bump version
         if: steps.check_files.outputs.skip == 'false'
         run: |
-          for file in ${{ env.changed_files }}; do
-            if [[ $file == parcellab/common/* ]]; then
-              find parcellab -name Chart.yaml | while read chart_file; do
-                chart_dir=$(dirname "$chart_file")
-                echo "Processing $chart_file"
-                version=$(grep 'version:' $chart_file | cut -d ' ' -f 2)
-                version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
-                sed -i "s/version: $version/version: $version_bump/g" $chart_file
-              done
-              break
-            elif [[ $file == parcellab/*/* ]]; then
-              chart_dir=$(dirname "$file")
-              chart_file="$chart_dir/Chart.yaml"
-              if [[ -f $chart_file ]]; then
-                echo "Processing $chart_file"
-                version=$(grep 'version:' $chart_file | cut -d ' ' -f 2)
-                version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
-                sed -i "s/version: $version/version: $version_bump/g" $chart_file
-              fi
-            fi
+          find parcellab -name Chart.yaml | while read file; do
+              echo "Processing $file"
+              version=$(grep 'version:' $file | cut -d ' ' -f 2)
+              version_bump=$(echo "$version" | awk -F. '{if ($NF == 99) {$(NF-1) += 1; $NF = 0} else {$NF += 1}} 1' | sed 's/ /./g')
+              sed -i "s/version: $version/version: $version_bump/g" $file
           done
           git commit -am "Bump version"
           git push
-
-      - name: Add Helm repository
-        if: steps.check_files.outputs.skip == 'false'
-        run: helm repo add parcellab https://charts.parcellab.dev
-
-      - name: Update Helm repository
-        if: steps.check_files.outputs.skip == 'false'
-        run: helm repo update
 
       - name: Run chart-releaser library
         if: steps.check_files.outputs.skip == 'false'
