--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -114,11 +114,12 @@ podSecurityContext:
   # fsGroup: 2000
 
 resources:
-  limits:
-    memory: 128Mi
-  requests:
-    cpu: 50m
-    memory: 64Mi
+  {}
+#  limits:
+#    memory: 128Mi
+#  requests:
+#    cpu: 50m
+#    memory: 64Mi
 
 ##
 ## Postgresql
