--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -261,11 +261,13 @@ podSecurityContext:
   # fsGroup: 2000
 
 resources:
-  limits:
-    memory: 128Mi
-  requests:
-    cpu: 50m
-    memory: 64Mi
+  {}
+#  limits:
+#    memory: 128Mi
+#  requests:
+#    cpu: 50m
+#    memory: 64Mi
+
 # livenessProbe:
 #   httpGet:
 #     path: /
