--- a/parcellab/monolith/templates/service.yaml
+++ b/parcellab/monolith/templates/service.yaml
@@ -1,8 +1,12 @@
 {{- if .Values.extraServices -}}
 {{- $root := . -}}
 {{- range .Values.extraServices }}
+{{- if not .argoRollout.enabled }}
 {{- include "common.service" (merge (deepCopy $root) (dict "service" .)) }}
 ---
 {{- end }}
 {{- end }}
+{{- end }}
+{{- if not .Values.disableDefaultAppDeployment }}
 {{- include "common.service" . }}
+{{- end }}
