--- a/parcellab/microservice/templates/vpa.yaml
+++ b/parcellab/microservice/templates/vpa.yaml
@@ -1,3 +1,3 @@
-{{- if not .Values.argoRollout.enabled }}
+{{- if not .Values.disableDefaultAppDeployment }}
 {{- include "common.vpa" . }}
 {{- end }}
