chore: ensure vpa is deployed to workers and extraServices correctly

--- a/parcellab/monolith/templates/vpa.yaml
+++ b/parcellab/monolith/templates/vpa.yaml
@@ -1,3 +1,19 @@
-{{- if not .Values.disableDefaultAppDeployment }}
 {{- include "common.vpa" . }}
+---
+{{ if .Values.extraServices -}}
+{{- $root := . -}}
+{{- range .Values.extraServices }}
+{{- if .vpa -}}
+{{- include "common.vpa" (merge (deepCopy $root) (dict "vpa" .vpa "name" .name "service" . "type" "service")) }}{{- end }}
+---
+{{ end -}}
 {{- end }}
+---
+{{ if .Values.workers -}}
+{{- $root := . -}}
+{{- range .Values.workers }}
+{{- if .vpa -}}
+{{- include "common.vpa" (merge (deepCopy $root) (dict "vpa" .vpa "name" .name "service" . "type" "service")) }}{{- end }}
+---
+{{ end -}}
+{{- end -}}
