--- a/parcellab/worker-group/templates/rollout.yaml
+++ b/parcellab/worker-group/templates/rollout.yaml
@@ -1,6 +1,7 @@
 {{- if .Values.workers -}}
 {{- $root := . -}}
 {{- range .Values.workers }}
+{{- if .argoRollout }}
 {{- if .argoRollout.enabled -}}
 {{- include "common.argorollout" (merge (deepCopy $root) (dict "argoRollout" .argoRollout "name" .name "service" . "type" "worker")) }}
 {{- end }}
