--- a/parcellab/worker-group/templates/rollout.yaml
+++ b/parcellab/worker-group/templates/rollout.yaml
@@ -5,6 +5,7 @@
 {{- if .argoRollout.enabled -}}
 {{- include "common.argorollout" (merge (deepCopy $root) (dict "argoRollout" .argoRollout "name" .name "service" . "type" "worker")) }}
 {{- end }}
+{{- end }}
 ---
 {{- end -}}
 {{- end -}}
