fix: VPA for worker group manifest generation

--- a/parcellab/worker-group/templates/vpa.yaml
+++ b/parcellab/worker-group/templates/vpa.yaml
@@ -1,1 +1,6 @@
-{{- include "common.vpa" . }}
+{{- $root := . -}}
+{{- range .Values.workers }}
+{{- if .vpa -}}
+{{- include "common.vpa" (merge (deepCopy $root) (dict "vpa" .vpa "name" .name "service" . "type" "service")) }}{{- end }}
+---
+{{ end -}}
