--- a/parcellab/worker-group/values.yaml
+++ b/parcellab/worker-group/values.yaml
@@ -140,8 +140,7 @@ affinity: {}
 datadog:
   enabled: true
 
-imagePullSecrets:
-  - name: github-docker
+# imagePullSecrets:
 
 terminationGracePeriodSeconds: 30
 
