--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -199,8 +199,7 @@ affinity: {}
 datadog:
   enabled: true
 
-imagePullSecrets:
-  - name: github-docker
+# imagePullSecrets:
 
 terminationGracePeriodSeconds: 30
 
