feat: update chart dependencies to use bitnamilegacy repository

--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -126,6 +126,11 @@ resources:
 
 postgresql:
   enabled: false
+  security:
+    allowInsecureImages: false
+  image:
+    repository: bitnamilegacy/postgresql
+    tag: 17.4.0
   # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
 
 ##
@@ -134,4 +139,9 @@ postgresql:
 
 redis:
   enabled: false
+  security:
+    allowInsecureImages: false
+  image:
+    repository: bitnamilegacy/redis
+    tag: 8.2.1
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
