--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -287,6 +287,12 @@ resources:
 
 postgresql:
   enabled: false
+  security:
+    allowInsecureImages: false
+
+  image:
+    repository: bitnamilegacy/postgresql
+    tag: 17.4.0
   # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
 
 ##
@@ -295,6 +301,12 @@ postgresql:
 
 redis:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: false
+  image:
+    repository: bitnamilegacy/redis
+    tag: 8.2.1
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
 
 #  these containers share secrets, configmaps, volumes and environment variables from the settings above
