--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -287,8 +287,7 @@ resources:
 postgresql:
   enabled: false
   security:
-    allowInsecureImages: false
-
+    allowInsecureImages: true
   image:
     repository: bitnamilegacy/postgresql
     tag: 17.4.0
@@ -302,7 +301,7 @@ redis:
   enabled: false
   global:
     security:
-      allowInsecureImages: false
+      allowInsecureImages: true
   image:
     repository: bitnamilegacy/redis
     tag: 8.2.1
