feat: correct allowInsecureImages setting

--- a/parcellab/cronjob/values.yaml
+++ b/parcellab/cronjob/values.yaml
@@ -125,8 +125,9 @@ resources:
 
 postgresql:
   enabled: false
-  security:
-    allowInsecureImages: true
+  global:
+    security:
+      allowInsecureImages: true
   image:
     repository: bitnamilegacy/postgresql
     tag: 17.4.0
@@ -138,8 +139,9 @@ postgresql:
 
 redis:
   enabled: false
-  security:
-    allowInsecureImages: true
+  global:
+    security:
+      allowInsecureImages: true
   image:
     repository: bitnamilegacy/redis
     tag: 8.2.1
