--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -422,8 +422,9 @@ resources:
 
 postgresql:
   enabled: false
-  security:
-    allowInsecureImages: true
+  global:
+    security:
+      allowInsecureImages: true
   image:
     repository: bitnamilegacy/postgresql
     tag: 17.4.0
