--- a/parcellab/microservice/values.yaml
+++ b/parcellab/microservice/values.yaml
@@ -286,6 +286,12 @@ resources:
 
 postgresql:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
+  image:
+    repository: bitnamilegacy/postgresql
+    tag: 17.4.0
   # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
 
 ##
@@ -294,6 +300,12 @@ postgresql:
 
 redis:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
+  image:
+    repository: bitnamilegacy/redis
+    tag: 8.2.1
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
 
 #  these containers share secrets, configmaps, volumes and environment variables from the settings above
