--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -422,6 +422,12 @@ resources:
 
 postgresql:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
+  image:
+    repository: bitnamilegacy/postgresql
+    tag: 17.4.0
   # See default values: https://artifacthub.io/packages/helm/bitnami/postgresql?modal=values
   primary:
     persistentVolumeClaimRetentionPolicy:
@@ -431,6 +437,12 @@ postgresql:
 
 redis:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
+  image:
+    repository: bitnamilegacy/redis
+    tag: 8.2.1
   # See default values: https://artifacthub.io/packages/helm/bitnami/redis?modal=values
   master:
     persistentVolumeClaimRetentionPolicy:
@@ -445,6 +457,12 @@ redis:
 
 mongodb:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
+  image:
+    repository: bitnamilegacy/mongodb
+    tag: 8.0.13-debian-12-r0
   # See default values: https://artifacthub.io/packages/helm/bitnami/mongodb?modal=values
   persistentVolumeClaimRetentionPolicy:
     enabled: true
