fix: don't use generated name for hook
Using the generated name at least for a PostDelete hook was problematic, created too many jobs. I think in the case of ArgoCD hooks, we want the names to be unique?

--- a/parcellab/monolith/values.yaml
+++ b/parcellab/monolith/values.yaml
@@ -124,7 +124,7 @@ job:
 jobs: []
 #  - name: migrate
 #    hook: PreSync
-#    hookDeletePolicy: HookSucceeded
+#    hookDeletePolicy: HookFailed
 #    command:
 #      - /bin/sh
 #      - -c
