--- a/parcellab/common/values.yaml
+++ b/parcellab/common/values.yaml
@@ -40,8 +40,17 @@ httproute:
 # ReferenceGrant - Allow cross-namespace references
 referenceGrant:
   enabled: false
-  # Automatically allows HTTPRoute and SecurityPolicy from current namespace
-  # to reference Gateway and Secret in envoy-gateway namespace
+  # name: custom-grant  # Optional: custom name
+  # namespace: envoy-gateway  # Optional: where to create the grant (default: current namespace)
+  # from:  # Optional: specify what can reference (default: HTTPRoute from current namespace)
+  #   - group: gateway.networking.k8s.io
+  #     kind: HTTPRoute
+  #     namespace: myapp
+  # to:  # Optional: specify what can be referenced (default: Service)
+  #   - group: ""
+  #     kind: Service
+  #   - group: ""
+  #     kind: Secret
 
 # SecurityPolicy - OIDC Authentication with Group-Based Authorization
 # Example: Employee-Only App
