fix: PDB naming and default parameters

--- a/parcellab/microservice/templates/poddisruptionbudget.yaml
+++ b/parcellab/microservice/templates/poddisruptionbudget.yaml
@@ -1,1 +1,5 @@
+{{- if .Values.podDisruptionBudget }}
+{{- if .Values.podDisruptionBudget.enabled }}
 {{- include "common.poddisruptionbudget" . }}
+{{- end }}
+{{- end }}
