--- a/parcellab/monolith/templates/poddisruptionbudget.yaml
+++ b/parcellab/monolith/templates/poddisruptionbudget.yaml
@@ -1,1 +1,5 @@
+{{- if .Values.podDisruptionBudget }}
+{{- if .Values.podDisruptionBudget.enabled }}
 {{- include "common.poddisruptionbudget" . }}
+{{- end }}
+{{- end }}
