feat: inf-3308 adapt charts to support Envoy Gateway

--- a/parcellab/microservice/templates/referencegrant.yaml
+++ b/parcellab/microservice/templates/referencegrant.yaml
@@ -1,1 +1,5 @@
+{{- if .Values.referenceGrant }}
+{{- if .Values.referenceGrant.enabled }}
 {{- include "common.referencegrant" . }}
+{{- end }}
+{{- end }}
