--- a/parcellab/monolith/templates/referencegrant.yaml
+++ b/parcellab/monolith/templates/referencegrant.yaml
@@ -1,1 +1,5 @@
+{{- if .Values.referenceGrant }}
+{{- if .Values.referenceGrant.enabled }}
 {{- include "common.referencegrant" . }}
+{{- end }}
+{{- end }}
