--- a/parcellab/monolith/templates/securitypolicy.yaml
+++ b/parcellab/monolith/templates/securitypolicy.yaml
@@ -1,1 +1,5 @@
+{{- if .Values.securityPolicy }}
+{{- if .Values.securityPolicy.enabled }}
 {{- include "common.securitypolicy" . }}
+{{- end }}
+{{- end }}
